Move sprite table to separate header, add placeholder enemy

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CC	= /opt/gbdk/bin/lcc -Wa-l -Wl-m -Wl-j
 
-SPRITES = sprites/player.o sprites/bullet.o
+SPRITES = sprites/player.o sprites/bullet.o sprites/enemy.o
 
 .PHONY: all clean build game
 all: build
